# conceal-desktop

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  COPYRIGHT  Conceal-GUI.pro  ConcealWallet.nsi  CryptoNoteWallet.cmake  LICENSE  MyApp_en_US.ts  QREncode.cmake  README.md  brew_install_or_upgrade.sh  button styles.txt  conceal-desktop.desktop  conceal-desktop.pro  conceal.rc  sonar-project.properties  ubuntu-shortcut-creator.sh
.github/: checkout.bat  checkout.sh
.github/workflows/: appimage.yml  check.yml  codeql-analysis.yml  codeql-analysis_2.yml  macOS-10.14-release.yml  macOS.yml  sonarcloud.yml  ubuntu16.yml  ubuntu18.yml  ubuntu20.yml  ubuntu22.yml  ubuntu24.yml  windows.yml
Docker/: README.md
Docker/Docker-Ubuntu/: Dockerfile  docker-compose.yml
appimage/: .gitignore  conceal-desktop.desktop  create-appimage.sh
installer/windows/: .gitignore  ConcealInstaller.iss  README.md  deploy.bat  get_qt_path.ps1  license.txt  setup.iss
src/: AddressProvider.cpp  AddressProvider.h  AliasProvider.cpp  AliasProvider.h  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWalletConfig.h.in  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  ExchangeProvider.cpp  ExchangeProvider.h  LogFileWatcher.cpp  LogFileWatcher.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  OptimizationManager.cpp  OptimizationManager.h  PriceProvider.cpp  PriceProvider.h  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  StratumClient.cpp  StratumClient.h  TranslatorManager.cpp  TranslatorManager.h  Update.cpp  Update.h  UpdateManager.cpp  UpdateManager.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  (+6 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  AddressListModel.cpp  AddressListModel.h  AnimatedLabel.cpp  AnimatedLabel.h  BankingFrame.cpp  BankingFrame.h  BankingFrame2.cpp  BankingFrame2.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ContactDialog.cpp  ContactDialog.h  DepositDetailsDialog.cpp  DepositDetailsDialog.h  DepositListModel.cpp  DepositListModel.h  DepositModel.cpp  DepositModel.h  DepositsFrame.cpp  DepositsFrame.h  DisclaimerDialog.cpp  DisclaimerDialog.h  EditableStyle.cpp  EditableStyle.h  ExitWidget.cpp  ExitWidget.h  ImportGUIKeyDialog.cpp  ImportGUIKeyDialog.h  ImportKeyDialog.cpp  ImportKeyDialog.h  ImportSecretKeys.cpp  ImportSecretKeys.h  (+99 more)
src/gui/ui/: aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  bankingframe.ui  bankingframe2.ui  changepassworddialog.ui  contactdialog.ui  depositdetailsdialog.ui  depositsframe.ui  disclaimerdialog.ui  exitwidget.ui  importguikeydialog.ui  importkeydialog.ui  importsecretkeys.ui  importsecretkeysdialog.ui  importseed.ui  importseed2.ui  importseeddialog.ui  importtracking.ui  importtrackingdialog.ui  importviewkey.ui  languagesettings.ui  linksdialog.ui  mainpassworddialog.ui  mainwindow - Copy.ui  mainwindow.ui  mainwindow.ui.autosave  messageaddressframe.ui  messagedetailsdialog.ui  messagesframe.ui  miningframe.ui  newaddressdialog.ui  newnodedialog.ui  newpassworddialog.ui  newpooldialog.ui  nodesettings.ui  notification.ui  overviewframe.ui  overviewframe.ui.autosave  passworddialog.ui  (+11 more)
src/images/: cryptonote.hqx  cryptonote.icns
src/images/appicon/: conceal.icns
src/languages/: cn.qm  cn.qph  cn.ts  en.qm  en.ts  fr.qm  fr.qph  fr.ts  ru.qm  ru.qph  ru.ts  tr.qm  tr.qph  tr.ts  tr2.qm  tr2.qph  us.ts
src/languages/qt/: README.md  qtbase_ru.qm
